welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:12: error: ')' expected but 'return' found.
  return false
  ^