welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
  
  if ((estFaceMur()==false){
    avance()
    if (getCouleurSol()==Color.green){
      return true
    }
  }
     
  
  return false
}